[test] role service test - create role, update permission, retrieve role info, delete role